# codex-channels

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE_REBUILD_PROPOSAL.md  LICENSE  README.md  config.example.toml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json  vitest.config.ts
.githooks/: README.md  pre-commit
gateway/: vitest.config.ts
launchd/: README.md  com.hegenai.codex-app-server.plist.template  com.hegenai.codex-gateway.plist.template  com.msola.codex-app-server.plist.template  com.msola.codex-gateway.plist.template
runtime/: README.md  config-event-queue.mjs  gateway-config.d.mts  gateway-config.mjs  network-proxy.d.mts  network-proxy.mjs  project-rules.d.mts  project-rules.mjs
scripts/: README.md  check-docs.mjs  check-gateway-version.mjs  check-protocol.mjs  check-release-tag.mjs  clean-dist.mjs  codex-remote.mjs  codex-remote.sh  codex-rules.mjs  config-event-queue.d.mts  config-event-queue.mjs  dev-all.mjs  doctor.mjs  generate-protocol.mjs  install-git-hooks.mjs  install-launchd.mjs  install-systemd.mjs  launchd-control.sh  package-path.mjs  prepare-package.mjs  runtime-config.mjs  setup.mjs  smoke-package.mjs  smoke-source-prepare.mjs  smoke_app_server.py  smoke_approval.py  smoke_commands.py  smoke_model.py  smoke_telegram.py  sync-gateway-version.mjs  systemd-control.sh  telegram-setup.mjs  validate-config.mjs  verify-commit.mjs  workspace-add.mjs  workspace-config.mjs
src/: README.md  main.ts  version.json
systemd/: README.md  codex-connect-app-server.service.template  (+1 more)
(+204 files in other folders)
